Adding quadratic type equation
Signed-off-by: jarchambault <jeanne.archambault@artelys.com>